--- a/views/contact.html
+++ b/views/contact.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/contact.css">
+    <script src="https://kit.fontawesome.com/cf717cb818.js" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
     <title>Contact</title>
   </head>
   <body>
     <nav class="nav" id="myNav">
-      <a href="home" class="home"><span></span>Home</a>
-      <a href="about" class="about"><span></span>About</a>
-      <a href="contact" class="contact active"><span></span>Contact Me</a>
-      <a href="game" class="game"><span></span>Game</a>
-      <a class="icon" onclick="dropDown()"></a>
+      <a href="home" class="home"><i class="fas fa-home"></i>Home</a>
+      <a href="projects" class="projects"><i class="fas fa-project-diagram"></i>Projects</a>
+      <a href="about" class="about"><i class="far fa-question-circle"></i>About</a>
+      <a href="contact" class="contact active"><i class="fas fa-address-card"></i>Contact Me</a>
+      <a href="game" class="game"><i class="fas fa-gamepad"></i>Game</a>
+      <a id="icon" onclick="dropDown()"><i class="fas fa-align-justify"></i></a>
     </nav>
     <h1 id="heading">Contact Details</h1>
     <div id="content">
