Fixed some spelling mistakes

--- a/views/projects.html
+++ b/views/projects.html
@@ -23,7 +23,7 @@
       <div id="project1">
         <h2>My Website</h2>
         <img src="../images/project1.jpg" alt="Picture of my website">
-        <p>My website to show my projects and basic knowledge of HTML, CSS and Javascript.</p>
+        <p>Website I created to show my projects and basic knowledge of HTML, CSS and Javascript.</p>
         <a href="https://github.com/Shaun-Pienaar/My-Website.git">Github repo</a>
         <a href="home">Rising Dev</a>
       </div>
@@ -36,7 +36,7 @@
       <div id="project3">
         <h2>Weather app</h2>
         <img src="../images/project3.jpg" alt="Picture of my weather app">
-        <p>A small apllication that gives the weather at any city for any time</p>
+        <p>A small web apllication that gives the weather for any city at any given time</p>
         <a href="https://github.com/Shaun-Pienaar/Weather-App.git">Github repo</a>
         <a href="https://anyweather.herokuapp.com">Get Weather</a>
       </div>
