--- a/views/about.html
+++ b/views/about.html
@@ -21,28 +21,28 @@
     <h1 id="heading">About Me</h1>
     <div id="content">
       <p>
-        My name is Shaun Pienaar. I'm an aspiring and self taught developer. I am currently
+        My name is Shaun Pienaar. I am an aspiring and self-taught developer. I'm currently
         working on web and game development, but interested in the broader field of computer
         sience in general. I know basic HTML, CSS and is well versed in Javascript. I would
-        also consider myself intermediate in C-sharp. I have limmited experience working with
+        also consider myself intermediate in C-sharp. I have limited experience working with
         third party libraries, but this site for example is running with Node and was created
         with the Express framework.
       </p>
       <p>
         I have done some game development as well and am quite familiar with the Unity game
         engine. I have not yet published any games, but would like to do so in the future.
-        I will also love to expand my knowledge into the field of artifficial intellegence and
+        I will also love to expand my knowledge into the field of artificial intellegence and
         even eventually build my own game engine and physics library.
       </p>
       <p>
-        Being quite good with math and science and knowing at least the basics of algorithms,
+        Being quite good at math and science and knowing at least the basics of algorithms,
         I find it quite easy to implement physics formulas in my code. I believe that I am a
-        natural problem solver, therefore I thoroughly enjoy programming. It is something that
+        natural problem solver and therefore I genuinely enjoy programming. It is something that
         I am very passionate about and eager to learn as much as I can.
       </p>
       <p>
         I have not yet had the opportunity to have a proffesional position in the field of computer
-        science, although I do spend my free time trying to improve my craft. I only recently
+        science, however I do spend my free time trying to improve my craft. I only recently
         started feeling confident enough to show my code to others, as I have not been doing this
         for very long. I do now have a Github account and plan on starting to publish my projects
         there.
@@ -51,7 +51,7 @@
         This is the first complete website that I have designed and coded and see it as the start
         of my career in computer science. I am still very new to this field and welcome any advice
         and constructive criticism. I plan on eventually adding a comment section to this site,
-        although for now my contact details can be found on the "contact" section of this website.
+        although for now my contact details can be found in the "Contact Me" section of this website.
         I am enthusiastic to advance my career in this field and welcome any opportunity to do so.
       </p>
     </div>
