Changed name of website

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="https://kit.fontawesome.com/cf717cb818.js" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
-    <title>Home</title>
+    <title>Rising-Developer</title>
   </head>
   <body>
     <nav class="nav" id="myNav">
@@ -18,6 +18,6 @@
       <a href="game" class="game"><i class="fas fa-gamepad"></i>Game</a>
       <a id="icon" onclick="dropDown()"><i class="fas fa-align-justify"></i></a>
     </nav>
-    <h1 id="heading">Rising-Dev</h1>
+    <h1 id="heading">Rising-Developer</h1>
   </body>
 </html>
