--- a/views/projects.html
+++ b/views/projects.html
@@ -25,7 +25,7 @@
         <img src="../images/project1.jpg" alt="Picture of my website">
         <p>Website I created to show my projects and basic knowledge of HTML, CSS and Javascript.</p>
         <a href="https://github.com/Shaun-Pienaar/My-Website.git">Github repo</a>
-        <a href="home">Rising Dev</a>
+        <a href="home">Rising Developer</a>
       </div>
       <div id="project2">
         <h2>Unity Game</h2>
@@ -44,7 +44,7 @@
         <h2>Astroids clone</h2>
         <img src="../images/project4.jpg" alt="Picture of my 'Astroids' clone">
         <p>A browser game I made as a clone of the classic game "Astroids".</p>
-        <a href="https://github.com/Shaun-Pienaar/Astroids-clone">Github repo</a>
+        <a href="https://github.com/Shaun-Pienaar/Astroids-clone.git">Github repo</a>
         <a href="game">Rising Dev</a>
       </div>
     </div>
