Changed name of website on projects page

--- a/views/projects.html
+++ b/views/projects.html
@@ -45,7 +45,7 @@
         <img src="../images/project4.jpg" alt="Picture of my 'Astroids' clone">
         <p>A browser game I made as a clone of the classic game "Astroids".</p>
         <a href="https://github.com/Shaun-Pienaar/Astroids-clone.git">Github repo</a>
-        <a href="game">Rising Dev</a>
+        <a href="game">Rising Developer</a>
       </div>
     </div>
   </body>
