--- a/public/css/about.css
+++ b/public/css/about.css
@@ -8,7 +8,10 @@ body{
 }
 
 #heading{
-  background-color: cornflowerblue;
+  background-color: rgba(0, 0, 0, 0.2);;
+  border: 3px solid black;
+  border-radius: 30%;
+  color: cyan;
   vertical-align: middle;
   width: 36%;
   height: 6%;
@@ -20,6 +23,7 @@ body{
 }
 
 #content{
+  border-radius: 20px;
   background-color: rgba(255,255,255,0.6);
   width: 70vw;
   padding-left: 3%;
