--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@ body{
 }
 
 nav{
+    border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -12,7 +13,7 @@ nav{
     width: 100%;
     position: fixed;
     left: -0%;
-    top: 0%;
+    top: 1%;
     z-index: 10;
 }
 
