--- a/views/projects.html
+++ b/views/projects.html
@@ -28,7 +28,7 @@
     </div>
     <div id="container">
       <div id="project1" onclick="switchClass()">
-        <div class="top">
+        <div>
           <h2>My Website</h2>
           <img src="../images/project1.jpg" alt="Picture of my website">
           <p>Website I created to show my projects and basic knowledge of HTML, CSS and Javascript.</p>
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div id="project2" onclick="switchClass2()">
-        <div class="top">
+        <div>
           <h2>Unity Game</h2>
           <img src="../images/project2.jpg" alt="Picture of my Unity game">
           <p>Originally a Unity tutorial that I extented with added features, stages, highscores and a menu.</p>
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div id="project3" onclick="switchClass3()">
-        <div class="top">
+        <div>
           <h2>Weather app</h2>
           <img src="../images/project3.jpg" alt="Picture of my weather app">
           <p>A small web apllication that gives the weather for any city at any given time</p>
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div id="project4" onclick="switchClass4()">
-        <div class="top">
+        <div>
           <h2>Astroids clone</h2>
           <img src="../images/project4.jpg" alt="Picture of my 'Astroids' clone">
           <p>A browser game I made as a clone of the classic game "Astroids".</p>
