--- a/public/css/about.css
+++ b/public/css/about.css
@@ -8,10 +8,14 @@ body{
 }
 
 #heading{
-  background-color: rgba(0, 0, 0, 0.2);;
-  border: 3px solid black;
-  border-radius: 30%;
-  color: cyan;
+  background-color: rgba(50, 60, 70, 0.3);;
+  border-top: 2px solid rgb(52, 60, 71);
+  border-left: 2px solid rgb(52, 60, 71);
+  border-right: 5px solid rgb(52, 60, 71);
+  border-bottom: 5px solid rgb(52, 60, 71);
+  border-top-right-radius: 80%;
+  border-top-left-radius: 80%;
+  color: rgb(228, 225, 189);
   vertical-align: middle;
   width: 36%;
   height: 6%;
@@ -23,8 +27,12 @@ body{
 }
 
 #content{
+  border-top: 3px solid rgb(52, 60, 71);
+  border-left: 3px solid rgb(52, 60, 71);
+  border-right: 8px solid rgb(52, 60, 71);
+  border-bottom: 8px solid rgb(52, 60, 71);
   border-radius: 20px;
-  background-color: rgba(255,255,255,0.6);
+  background-color: rgba(192, 192, 192, 0.6);
   width: 70vw;
   padding-left: 3%;
   padding-right: 3%;
@@ -34,4 +42,10 @@ body{
   top: 8vh;
   left: 12vw;
   font-size: 1.2em;
+}
+
+@media screen and (max-width: 600px){
+  #heading{
+    font-size: 7vw;
+  }
 }
