--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -9,10 +9,14 @@ body{
 }
 
 #heading{
-  background-color: rgba(0, 0, 0, 0.2);
-  border: 3px solid black;
-  border-radius: 30%;
-  color: cyan;
+  background-color: rgba(50, 60, 70, 0.3);;
+  border-top: 2px solid rgb(52, 60, 71);
+  border-left: 2px solid rgb(52, 60, 71);
+  border-right: 5px solid rgb(52, 60, 71);
+  border-bottom: 5px solid rgb(52, 60, 71);
+  border-top-right-radius: 80%;
+  border-top-left-radius: 80%;
+  color: rgb(228, 225, 189);
   vertical-align: middle;
   width: 30%;
   height: 6%;
@@ -24,11 +28,15 @@ body{
 }
 
 #content{
+  border-top: 3px solid rgb(52, 60, 71);
+  border-left: 3px solid rgb(52, 60, 71);
+  border-right: 8px solid rgb(52, 60, 71);
+  border-bottom: 8px solid rgb(52, 60, 71);
   border-radius: 20px;
+  background-color: rgba(192, 192, 192, 0.6);
   text-align: center;
   padding-left: 2%;
   padding-right: 2%;
-  background-color: rgba(255,255,255,0.6);
   width: 50vw;
   position: relative;
   left: 24vw;
@@ -37,4 +45,10 @@ body{
 
 #content label{
   font-weight: bold;
+}
+
+@media screen and (max-width: 600px){
+  #heading{
+    font-size: 7vw;
+  }
 }
