--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,12 @@ body{
 }
 
 #heading{
-  color: rgb(71, 69, 69);
+  border-top: 3px solid rgb(52, 60, 71);
+  border-left: 3px solid rgb(52, 60, 71);
+  border-right: 8px solid rgb(52, 60, 71);
+  border-bottom: 8px solid rgb(52, 60, 71);
+  border-radius: 40px;
+  color: rgb(52, 60, 71);
   width: 70%;
   line-height: 100%;
   height: 10%;
@@ -19,7 +24,6 @@ body{
   position: relative;
   top: 20vh;
   left: 15vw;
-  border: 1px solid black;
   background-color: ghostwhite;
   background-image:repeating-linear-gradient(180deg, rgb(0,0,0) 0%, rgb(0,0,255) 4%, rgb(255,0,0) 8%, transparent 10%, transparent 90%, rgb(255,0,0) 92%, rgb(0,0,255) 96%, rgb(0,0,0) 100%),
     repeating-linear-gradient(-45deg, transparent 0%, transparent 85%, rgb(255,0,0) 88%, rgb(0,0,255) 94%, rgb(0,0,0) 100%),
