--- a/views/projects.html
+++ b/views/projects.html
@@ -15,6 +15,7 @@
       <a href="projects" class="projects active"><i class="fas fa-project-diagram"></i>Projects</a>
       <a href="about" class="about"><i class="far fa-question-circle"></i>About</a>
       <a href="contact" class="contact"><i class="fas fa-address-card"></i>Contact Me</a>
+      <a href="donation" class="donation"><i class="fas fa-money-check-alt"></i>Donations</a>
       <a href="game" class="game"><i class="fas fa-gamepad"></i>Game</a>
       <a id="icon" onclick="dropDown()"><i class="fas fa-align-justify"></i></a>
     </nav>
