--- a/public/css/donation.css
+++ b/public/css/donation.css
@@ -6,6 +6,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
+  margin-bottom: 3%;
 }
 
 #heading{
@@ -30,7 +31,7 @@ body{
 #disclaimer{
   background-color: rgba(192,192,192,0.6);
   position: relative;
-  top: 5vh;
+  top: 4vh;
   left: 5vw;
   width: 90%;
   text-align: center;
@@ -44,7 +45,7 @@ body{
 
 #store{
   position: relative;
-  top: 5vh;
+  top: 5%;
   left: 5vw;
   width: 90%;
   display: grid;
@@ -94,13 +95,53 @@ body{
   background-color: rgb(142, 133, 201);
 }
 
+#cartholder{
+  display: none;
+  position: fixed;
+  top: 57vh;
+  left: 7vw;
+  width: 85%;
+  background-color: rgba(151, 184, 197, 0.8);
+  border-radius: 10px;
+  max-height: 40vh;
+  overflow-y: scroll;
+}
+
+#cartholder::-webkit-scrollbar{
+  width: 20px;
+  background-color: #F5F5F5;
+  border-radius: 10px;
+}
+
+#cartholder::-webkit-scrollbar-track{
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+#cartholder::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(122,153,217)),
+									   color-stop(0.72, rgb(73,125,189)),
+                     color-stop(0.86, rgb(28,58,148)));
+  border: 1px solid black;
+}
+
+#cartholder::-webkit-scrollbar-button{
+  display: none;
+}
+
 #cart{
   background-color:rgba(151, 184, 197, 0.8);
   border: 2px solid black;
-  border-radius: 5vw;
+  border-radius: 25px;
   position: relative;
-  top: 5vh;
-  left: 5vw;
+  left: 5%;
   width: 90%;
 }
 
@@ -116,8 +157,8 @@ body{
   border-radius: 8px;
   margin-bottom: 1%;
   position: relative;
-  left: 2vw;
-  width: 95%;
+  left: 3%;
+  width: 94%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   font-weight: bold;
@@ -138,11 +179,11 @@ body{
   border: 2px solid black;
   border-radius: 5vw;
   position: relative;
-  top: 8vh;
-  left: 20vw;
+  top: 4%;
+  left: 20%;
   width: 60%;
-  font-size: x-large;
-  margin-bottom: 5%;
+  font-size: large;
+  margin-bottom: 1%;
 }
 
 .purchase-button{
@@ -150,7 +191,7 @@ body{
   font-size: x-large;
   font-weight: bold;
   margin-bottom: 1%;
-  border: 2px solid black;
+  border: 3px solid black;
   border-radius: 10px;
 }
 
@@ -202,14 +243,14 @@ body{
 .sub-heading{
   background-color: white;
   position: relative;
-  top: 5vh;
-  left: 40vw;
+  top: 6%;
+  left: 40%;
   width: 20%;
   border: 1px solid black;
   font-size: xx-large;
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 800px){
   #heading{
     font-size: 7vw;
   }
@@ -222,6 +263,8 @@ body{
   }
 
   .sub-heading{
+    left: 35%;
     width: 30%;
+    font-size: x-large;
   }
 }
