--- a/views/donation.ejs
+++ b/views/donation.ejs
@@ -57,7 +57,7 @@
       <input type="text" class="name_first" placeholder="optional">
       <label class="name_last_lable">Last Name:</label>
       <input type="text" class="name_last" placeholder="optional">
-      <label class="email_address_lable">Email Address (to recieve payment confirmation):</label>
+      <label class="email_address_lable">Email Address:<br />(to recieve payment confirmation)</label>
       <input type="email" class="email_address" placeholder="optional@gmail.com">
       <label class="cell_number_lable">Cell Number:</label>
       <input type="tel" class="cell_number" placeholder="0820000000">
