--- a/public/css/donation.css
+++ b/public/css/donation.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'assassinregular';
+  src: url('../fonts/assassin-webfont.woff2') format('woff2'),
+       url('../fonts/assassin-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'astarothregular';
+  src: url('../fonts/astaroth-webfont.woff2') format('woff2'),
+       url('../fonts/astaroth-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body{
   background-image: url(../images/bussiness1.jpg);
   background-position: center;
@@ -15,6 +31,9 @@ body{
   border-left: 2px solid rgb(52, 60, 71);
   border-right: 5px solid rgb(52, 60, 71);
   border-bottom: 5px solid rgb(52, 60, 71);
+  box-shadow: 5px 5px 3px black;
+  font-family: 'WebFont', 'assassinregular';
+  text-shadow: 5px 3px 2px rgb(52, 60, 71);
   border-top-right-radius: 80%;
   border-top-left-radius: 80%;
   color: rgb(228, 225, 189);
@@ -34,6 +53,8 @@ body{
   top: 4vh;
   left: 5vw;
   width: 90%;
+  font-family: 'WebFont', 'astarothregular';
+  font-size: 2em;
   text-align: center;
   border: 1px solid black;
 }
@@ -41,6 +62,7 @@ body{
 .btn{
   border: 2px solid gray;
   border-radius: 10px;
+  box-shadow: 4px 4px 3px black;
 }
 
 #store{
@@ -54,6 +76,8 @@ body{
 
 .store-item{
   background-color: rgba(151, 184, 197, 0.8);
+  text-shadow: 2px 2px 2px darkblue;
+  box-shadow: 2px 2px 2px 2px darkslategray;
   border: 2px solid black;
   border-radius: 20%;
   width: 60%;
@@ -102,6 +126,7 @@ body{
   left: 7vw;
   width: 85%;
   background-color: rgba(151, 184, 197, 0.8);
+  text-shadow: 1px 1px 1px darkblue;
   border-radius: 10px;
   max-height: 40vh;
   overflow-y: scroll;
@@ -153,6 +178,7 @@ body{
 
 .cart-item{
   background-color: greenyellow;
+  text-shadow: 0px 0px white;
   border: 2px solid black;
   border-radius: 8px;
   margin-bottom: 1%;
@@ -167,11 +193,13 @@ body{
 .quantity-decrement-button{
   margin-right: 1%;
   border-radius: 100%;
+  box-shadow: 1px 1px black;
 }
 
 .quantity-increment-button{
   margin-left: 1%;
   border-radius: 100%;
+  box-shadow: 1px 1px black;
 }
 
 #cartTotal{
@@ -213,11 +241,15 @@ body{
   left: 5%;
   width: 40%;
   height: 15%;
-  border: 1px solid black;
-  margin-top: 2px;
-  margin-bottom: 2px;
+  box-sizing: border-box;
+  border: 2px solid black;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  padding-left: 5%;
+  padding-right: 5%;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 #info input{
@@ -226,6 +258,8 @@ body{
   right: 5%;
   width: 40%;
   height: 15%;
+  background-color: lightblue;
+  text-align: center;
 }
 
 #info button{
@@ -247,6 +281,7 @@ body{
   left: 40%;
   width: 20%;
   border: 1px solid black;
+  text-shadow: 3px 1px 2px rgb(104, 104, 250);
   font-size: xx-large;
 }
 
@@ -260,6 +295,10 @@ body{
     width: 40%;
     font-size: large;
     font-weight: normal;
+  }
+
+  #info label{
+    padding: 0%;
   }
 
   .sub-heading{
