--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'assassinregular';
+  src: url('../fonts/assassin-webfont.woff2') format('woff2'),
+       url('../fonts/assassin-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body{
   background-image: url(../images/code.jpg);
   background-position: center;
@@ -12,11 +20,13 @@ body{
   border-left: 4px solid rgb(52, 60, 71);
   border-right: 8px solid rgb(52, 60, 71);
   border-bottom: 8px solid rgb(52, 60, 71);
+  box-shadow: 10px 10px 7px rgb(0,0,0);
   border-radius: 40px;
   color: rgb(52, 60, 71);
   width: 70%;
   line-height: 100%;
   height: 10%;
+  font-family: 'WebFont', 'assassinregular';
   font-weight: bold;
   font-size: 12vw;
   text-align: center;
