--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'assassinregular';
+  src: url('../fonts/assassin-webfont.woff2') format('woff2'),
+       url('../fonts/assassin-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'quirkyrobotmedium';
+  src: url('../fonts/quirkyrobot-webfont.woff2') format('woff2'),
+       url('../fonts/quirkyrobot-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body{
   background-image: url(../images/download.jpg);
   background-position: center;
@@ -22,6 +38,9 @@ body{
   border-left: 2px solid rgb(52, 60, 71);
   border-right: 5px solid rgb(52, 60, 71);
   border-bottom: 5px solid rgb(52, 60, 71);
+  box-shadow: 5px 5px 3px black;
+  text-shadow: 5px 3px 2px rgb(52, 60, 71);
+  font-family: 'WebFont', 'assassinregular';
   border-top-right-radius: 80%;
   border-top-left-radius: 80%;
   color: rgb(228, 225, 189);
@@ -33,14 +52,17 @@ body{
   flex-direction: column;
   vertical-align: middle;
   width: 50%;
+  font-family: 'WebFont', 'quirkyrobotmedium';
   text-align: center;
   position: relative;
   top: 7vh;
   left: 25%;
   border-top: 2px solid rgb(52, 60, 71);
   border-left: 2px solid rgb(52, 60, 71);
-  border-right: 5px solid rgb(52, 60, 71);
-  border-bottom: 5px solid rgb(52, 60, 71);
+  border-right: 2px solid rgb(52, 60, 71);
+  border-bottom: 2px solid rgb(52, 60, 71);
+  box-shadow: 8px 10px 6px black;
+  text-shadow: 2px 2px 2px rgb(52, 60, 71);
   border-radius: 20%;
   background-color: rgba(192, 192, 192, 0.5);
   color: black;
@@ -110,8 +132,11 @@ div div{
 div div div{
   border-top: 2px solid rgb(52, 60, 71);
   border-left: 2px solid rgb(52, 60, 71);
-  border-right: 5px solid rgb(52, 60, 71);
-  border-bottom: 5px solid rgb(52, 60, 71);
+  border-right: 2px solid rgb(52, 60, 71);
+  border-bottom: 2px solid rgb(52, 60, 71);
+  box-shadow: 7px 7px 4px black;
+  font-family: 'WebFont', 'assassinregular';
+  text-shadow: 2px 2px rgb(110, 111, 112);
   position: relative;
   top: 0;
   bottom: 0;
